VYaml.Benchmark/Examples/sample_envoy.json
{
  "admin": {
    "address": {
      "socket_address": {
        "port_value": 9901,
        "address": "127.0.0.1"
      }
    }
  },
  "static_resources": {
    "clusters": [
      {
        "type": "EDS",
        "lb_policy": "ROUND_ROBIN",
        "eds_cluster_config": {
          "eds_config": {
            "resource_api_version": "V3",
            "api_config_source": {
              "transport_api_version": "V3",
              "grpc_services": [
                {
                  "envoy_grpc": {
                    "cluster_name": "xds_cluster"
                  }
                }
              ],
              "api_type": "GRPC"
            }
          }
        },
        "name": "some_service",
        "connect_timeout": "0.25s"
      },
      {
        "typed_extension_protocol_options": {
          "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
            "explicit_http_config": {
              "http2_protocol_options": {
                "connection_keepalive": {
                  "interval": "30s",
                  "timeout": "5s"
                }
              }
            },
            "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions"
          }
        },
        "load_assignment": {
          "cluster_name": "xds_cluster",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "port_value": 5678,
                        "address": "127.0.0.1"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "xds_cluster",
        "lb_policy": "ROUND_ROBIN",
        "upstream_connection_options": {
          "tcp_keepalive": {}
        },
        "type": "STATIC",
        "connect_timeout": "0.25s"
      }
    ],
    "listeners": [
      {
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.router",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                      }
                    }
                  ],
                  "stat_prefix": "ingress_http",
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "domains": [
                          "*"
                        ],
                        "routes": [
                          {
                            "route": {
                              "cluster": "some_service"
                            },
                            "match": {
                              "prefix": "/"
                            }
                          }
                        ],
                        "name": "local_service"
                      }
                    ],
                    "name": "local_route"
                  },
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "codec_type": "AUTO"
                }
              }
            ]
          }
        ],
        "name": "listener_0",
        "address": {
          "socket_address": {
            "port_value": 10000,
            "address": "127.0.0.1"
          }
        }
      }
    ]
  }
}
